# caliborn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  MIGRATION.md  caliborn.openapi.json  compose.dev.yaml
dev/: .env.example  liquidsoap.liq
examples/: playground.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240530_174050_edit_users_change_watched_hours.rs  m20240706_153336_edit_server_channel_config_add_last_message_sent.rs  m20250420_155859_edit_users_add_username.rs  m20250422_120742_create_api_keys.rs  m20250423_082923_edit_users_remove_grist.rs  m20250424_162423_edit_api_keys_add_hash.rs  m20250429_074227_create_cooldowns.rs  m20250702_192327_create_songs_fulltext.rs  m20250715_104753_create_roles.rs  m20250715_104843_create_permissions.rs  m20250715_105012_create_role_permissions.rs  m20250715_105343_create_user_roles.rs  m20250715_105431_create_user_permissions.rs  m20250715_105638_seed_roles.rs  m20250715_111004_seed_permissions.rs  m20250715_164729_seed_role_permissions.rs  m20251127_103126_edit_users_add_role_id.rs  m20260510_120000_create_radio_state.rs  m20260510_120100_create_minigame_history.rs  m20260510_120200_create_discord_role_connections.rs  m20260510_120300_create_discord_oauth_tokens.rs  m20260510_130000_seed_admin_permissions.rs
shared_constants/: Cargo.toml
shared_constants/src/: permissions.rs
src/: config.rs  fixtures.rs  lib.rs  liquidsoap.rs  main.rs  openapi.rs  pg_extension.rs  sea_orm_utils.rs  vectorizer.rs
src/dtos/: admin.rs  auth.rs  cans.rs  economy.rs  error.rs  minigames.rs  mod.rs  page.rs  profile.rs  songs.rs  stream.rs  users.rs
src/entities/: api_keys.rs  cans.rs  connected_youtube_accounts.rs  cooldown.rs  discord_oauth_tokens.rs  discord_role_connections.rs  favourite_songs.rs  minigame_history.rs  mod.rs  (+19 more)
tests/: common.rs  cooldowns.rs  dice.rs  economy.rs  linked_roles.rs  profile.rs  pvp.rs  scenario_earn_and_gamble.rs  scenario_song_request.rs  slcb.rs  slots.rs  songs.rs  stream.rs  token_store.rs  youtube.rs
(+53 files in other folders)
